# flappybird

./: pyproject.toml
jogo/: bird.py  game.py
tests/: test_jogo.py
